objects/Graphics_Deliverables__c/Graphics_Deliverables__c.object-meta.xml
<CustomObject>
    <description>This is Graphics Deliverables object.</description>
    <label>Graphic Deliverable</label>
    <nameField>
        <label>Deliverable Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Graphic Deliverables</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>