objects/Graphics_Deliverables__c/fields/Deliverable_Date__c.field-meta.xml
<CustomField>
    <fullName>Deliverable_Date__c</fullName>
    <label>Deliverable Date</label>
    <type>Date</type>
</CustomField>