objects/Graphics_Deliverables__c/fields/Dummy_Date_3__c.field-meta.xml
<CustomField>
    <fullName>Dummy_Date_3__c</fullName>
    <label>Dummy Date 3</label>
    <type>Date</type>
</CustomField>