objects/Graphics_Deliverables__c/fields/Dummy_Picklist_1__c.field-meta.xml
<CustomField>
    <fullName>Dummy_Picklist_1__c</fullName>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Twitter</fullName>
            </value>
            <value>
                <fullName>Instagram</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>