objects/Graphics_Deliverables__c/fields/Dummy_Picklist_2__c.field-meta.xml
<CustomField>
    <fullName>Dummy_Picklist_2__c</fullName>
    <label>Dummy Picklist 2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dummy Picklist 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>