objects/Graphics_Deliverables__c/fields/Dummy_Picklist_3__c.field-meta.xml
<CustomField>
    <fullName>Dummy_Picklist_3__c</fullName>
    <label>Dummy Picklist 3</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dummy Picklist 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>