objects/Graphics_Deliverables__c/fields/Dummy_Text_10__c.field-meta.xml
<CustomField>
    <fullName>Dummy_Text_10__c</fullName>
    <label>Dummy Text 10</label>
    <length>255</length>
    <type>Text</type>
</CustomField>