objects/Graphics_Deliverables__c/fields/Dummy_Text_12__c.field-meta.xml
<CustomField>
    <fullName>Dummy_Text_12__c</fullName>
    <label>Dummy Text 12</label>
    <length>255</length>
    <type>Text</type>
</CustomField>