objects/Graphics_Deliverables__c/fields/Graphics_Description__c.field-meta.xml
<CustomField>
    <fullName>Graphics_Description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>