objects/Graphics_Deliverables__c/fields/Graphics_Note__c.field-meta.xml
<CustomField>
    <fullName>Graphics_Note__c</fullName>
    <label>Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>