objects/Graphics_Deliverables__c/fields/Graphics_Type__c.field-meta.xml
<CustomField>
    <fullName>Graphics_Type__c</fullName>
    <label>Deliverable Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>