objects/Graphics_Deliverables__c/fields/Job__c.field-meta.xml
<CustomField>
    <fullName>Job__c</fullName>
    <label>Job</label>
    <referenceTo>Job__c</referenceTo>
    <relationshipLabel>Graphics Deliverables</relationshipLabel>
    <relationshipName>Graphics_Deliverables</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>