objects/Graphics_Deliverables__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Job__c</columns>
    <columns>Dummy_Picklist_1__c</columns>
    <columns>NAME</columns>
    <columns>Deliverable_Date__c</columns>
    <columns>Graphics_Description__c</columns>
    <columns>Graphics_Note__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Deliverable_Date__c</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <label>All</label>
</ListView>